TEST_PROGRAMS/INVALID/scott_cooper/invalid_identifier.min
# Scott Cooper
# 260503452
# COMP520 - Winter 2016
#
# Identifiers should not allow a number as the first character

var 0abc : int;

